# aws-provider

./: Cargo.toml  provider-minimal.k
examples/s3/: README.md  multiple-buckets.k  simple-bucket.k
src/: lib.rs
src/accessanalyzer/: mod.rs
src/accessanalyzer_2019_11_01/: mod.rs
src/account/: mod.rs
src/account_2021_02_01/: mod.rs
src/acm/: mod.rs
src/acm_2015_12_08/: mod.rs
src/acm_pca_2017_08_22/: mod.rs
src/aiops/: mod.rs
src/aiops_2018_05_10/: mod.rs
src/amp/: mod.rs
src/amp_2020_08_01/: mod.rs
src/amplify/: mod.rs
src/amplify_2017_07_25/: mod.rs
src/amplifybackend/: mod.rs
src/amplifybackend_2020_08_11/: mod.rs
src/amplifyuibuilder/: mod.rs
src/amplifyuibuilder_2021_08_11/: mod.rs
src/api/: mod.rs
src/api_gateway_2015_07_09/: mod.rs
src/apigatewaymanagementapi/: mod.rs
src/apigatewaymanagementapi_2018_11_29/: mod.rs
src/apigatewayv2/: mod.rs
src/apigatewayv2_2018_11_29/: mod.rs
src/app/: mod.rs
src/app_mesh_2019_01_25/: mod.rs
src/appconfig/: mod.rs
src/appconfig_2019_10_09/: mod.rs
src/appconfigdata/: mod.rs
src/appconfigdata_2021_11_11/: mod.rs
src/appfabric/: mod.rs
src/appfabric_2023_05_19/: mod.rs
src/appflow/: mod.rs
src/appflow_2020_08_23/: mod.rs
src/appintegrations/: mod.rs
src/appintegrations_2020_07_29/: mod.rs
src/application/: mod.rs
src/application_auto_scaling_2016_02_06/: mod.rs
src/application_insights_2018_11_25/: mod.rs
src/application_signals_2024_04_15/: mod.rs
src/applicationcostprofiler/: mod.rs
src/applicationcostprofiler_2020_09_10/: mod.rs
src/apprunner/: mod.rs
src/apprunner_2020_05_15/: mod.rs
src/appstream/: mod.rs
src/appstream_2016_12_01/: mod.rs
src/appsync/: mod.rs
src/appsync_2017_07_25/: mod.rs
src/arc/: mod.rs
src/arc_region_switch_2022_07_26/: mod.rs
src/arc_zonal_shift_2022_10_30/: mod.rs
src/artifact/: mod.rs
src/artifact_2018_05_10/: mod.rs
src/athena/: mod.rs
src/athena_2017_05_18/: mod.rs
src/auditmanager/: mod.rs
src/auditmanager_2017_07_25/: mod.rs
src/auto/: mod.rs
src/auto_scaling_2011_01_01/: mod.rs
src/auto_scaling_plans_2018_01_06/: mod.rs
src/b2bi/: mod.rs
src/b2bi_2022_06_23/: mod.rs
src/backup/: mod.rs
src/backup_2018_11_15/: mod.rs
src/backup_gateway_2021_01_01/: mod.rs
src/backupsearch/: mod.rs
src/backupsearch_2018_05_10/: mod.rs
src/batch/: mod.rs
src/batch_2016_08_10/: mod.rs
src/bcm/: mod.rs
src/bcm_dashboards_2025_08_18/: mod.rs
src/bcm_data_exports_2023_11_26/: mod.rs
src/bcm_pricing_calculator_2024_06_19/: mod.rs
src/bcm_recommended_actions_2024_11_14/: mod.rs
src/bedrock/: mod.rs
src/bedrock_2023_04_20/: mod.rs
src/bedrock_agent_2023_06_05/: mod.rs
src/bedrock_agent_runtime_2023_07_26/: mod.rs
src/bedrock_agentcore_2024_02_28/: mod.rs
src/bedrock_agentcore_control_2023_06_05/: mod.rs
src/bedrock_data_automation_2023_07_26/: mod.rs
src/bedrock_data_automation_runtime_2024_06_13/: mod.rs
src/bedrock_runtime_2023_09_30/: mod.rs
src/billing/: mod.rs
src/billing_2023_09_07/: mod.rs
src/billingconductor/: mod.rs
src/billingconductor_2021_07_30/: mod.rs
src/braket/: mod.rs
src/braket_2019_09_01/: mod.rs
src/budgets/: mod.rs
src/budgets_2016_10_20/: mod.rs
src/chatbot/: mod.rs
src/chatbot_2017_10_11/: mod.rs
src/chime/: mod.rs
src/chime_2018_05_01/: mod.rs
src/chime_sdk/: mod.rs
src/chime_sdk_identity_2021_04_20/: mod.rs
src/chime_sdk_media_pipelines_2021_07_15/: mod.rs
src/chime_sdk_meetings_2021_07_15/: mod.rs
src/chime_sdk_messaging_2021_05_15/: mod.rs
src/cleanrooms/: mod.rs
src/cleanrooms_2022_02_17/: mod.rs
src/cleanroomsml/: mod.rs
src/cleanroomsml_2023_09_06/: mod.rs
src/cloud9/: mod.rs
src/cloud9_2017_09_23/: mod.rs
src/cloudcontrol/: mod.rs
src/cloudcontrol_2021_09_30/: mod.rs
src/clouddirectory/: mod.rs
src/clouddirectory_2017_01_11/: mod.rs
src/cloudformation/: mod.rs
src/cloudformation_2010_05_15/: mod.rs
src/cloudfront/: mod.rs
src/cloudfront_2020_05_31/: mod.rs
src/cloudfront_keyvaluestore_2022_07_26/: mod.rs
src/cloudhsm/: mod.rs
src/cloudhsm_2014_05_30/: mod.rs
src/cloudsearch/: mod.rs
src/cloudsearch_2013_01_01/: mod.rs
src/cloudsearch_domain_2013_01_01/: mod.rs
src/cloudtrail/: mod.rs
src/cloudtrail_2013_11_01/: mod.rs
src/cloudtrail_data_2021_08_11/: mod.rs
src/cloudwatch/: mod.rs
src/cloudwatch_2010_08_01/: mod.rs
src/cloudwatch_events_2015_10_07/: mod.rs
src/cloudwatch_logs_2014_03_28/: mod.rs
src/codeartifact/: mod.rs
src/codeartifact_2018_09_22/: mod.rs
src/codebuild/: mod.rs
src/codebuild_2016_10_06/: mod.rs
src/codecatalyst/: mod.rs
src/codecatalyst_2022_09_28/: mod.rs
src/codecommit/: mod.rs
src/codecommit_2015_04_13/: mod.rs
src/codeconnections/: mod.rs
src/codeconnections_2023_12_01/: mod.rs
src/codedeploy/: mod.rs
src/codedeploy_2014_10_06/: mod.rs
src/codeguru/: mod.rs
src/codeguru_reviewer_2019_09_19/: mod.rs
src/codeguru_security_2018_05_10/: mod.rs
src/codeguruprofiler/: mod.rs
src/codeguruprofiler_2019_07_18/: mod.rs
src/codepipeline/: mod.rs
src/codepipeline_2015_07_09/: mod.rs
src/codestar/: mod.rs
src/codestar_connections_2019_12_01/: mod.rs
src/codestar_notifications_2019_10_15/: mod.rs
src/cognito/: mod.rs
src/cognito_identity_2014_06_30/: mod.rs
src/cognito_identity_provider_2016_04_18/: mod.rs
src/cognito_sync_2014_06_30/: mod.rs
src/comprehend/: mod.rs
src/comprehend_2017_11_27/: mod.rs
src/comprehendmedical/: mod.rs
src/comprehendmedical_2018_10_30/: mod.rs
src/compute/: mod.rs
src/compute_optimizer_2019_11_01/: mod.rs
src/config/: mod.rs
src/config_service_2014_11_12/: mod.rs
src/connect/: mod.rs
src/connect_2017_08_08/: mod.rs
src/connect_contact_lens_2020_08_21/: mod.rs
src/connectcampaigns/: mod.rs
src/connectcampaigns_2021_01_30/: mod.rs
src/connectcampaignsv2/: mod.rs
src/connectcampaignsv2_2024_04_23/: mod.rs
src/connectcases/: mod.rs
src/connectcases_2022_10_03/: mod.rs
src/connectparticipant/: mod.rs
tests/: s3_integration_test.rs
(+10154 files in other folders)
