[package]
name = "hemmer-aws-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
# Hemmer provider runtime (placeholder)
# hemmer-runtime = "0.1"

# SDK dependencies for all services
aws-sdk-oam = "1"
aws-sdk-forecast = "1"
aws-sdk-bedrock = "1"
aws-sdk-codebuild = "1"
aws-sdk-iotdeviceadvisor = "1"
aws-sdk-auto = "1"
aws-sdk-database = "1"
aws-sdk-codeguruprofiler = "1"
aws-sdk-kinesis = "1"
aws-sdk-pinpoint = "1"
aws-sdk-chime = "1"
aws-sdk-iottwinmaker = "1"
aws-sdk-organizations = "1"
aws-sdk-networkflowmonitor = "1"
aws-sdk-shield = "1"
aws-sdk-ssm = "1"
aws-sdk-arc = "1"
aws-sdk-workspaces = "1"
aws-sdk-partnercentral = "1"
aws-sdk-geo = "1"
aws-sdk-signer = "1"
aws-sdk-marketplace = "1"
aws-sdk-lakeformation = "1"
aws-sdk-pcs = "1"
aws-sdk-kinesis = "1"
aws-sdk-mediaconnect = "1"
aws-sdk-secrets = "1"
aws-sdk-mwaa = "1"
aws-sdk-kms = "1"
aws-sdk-quicksight = "1"
aws-sdk-workmail = "1"
aws-sdk-eventbridge = "1"
aws-sdk-frauddetector = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-cloudhsm = "1"
aws-sdk-cloudsearch = "1"
aws-sdk-lookoutequipment = "1"
aws-sdk-iot = "1"
aws-sdk-securitylake = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-glue = "1"
aws-sdk-application = "1"
aws-sdk-personalize = "1"
aws-sdk-voice = "1"
aws-sdk-s3 = "1"
aws-sdk-appintegrations = "1"
aws-sdk-lex = "1"
aws-sdk-ssm = "1"
aws-sdk-chime = "1"
aws-sdk-sesv2 = "1"
aws-sdk-bedrock = "1"
aws-sdk-emr = "1"
aws-sdk-controltower = "1"
aws-sdk-resource = "1"
aws-sdk-s3 = "1"
aws-sdk-rtbfabric = "1"
aws-sdk-personalize = "1"
aws-sdk-marketplace = "1"
aws-sdk-directory = "1"
aws-sdk-ssm = "1"
aws-sdk-outposts = "1"
aws-sdk-workdocs = "1"
aws-sdk-networkmanager = "1"
aws-sdk-kinesis = "1"
aws-sdk-socialmessaging = "1"
aws-sdk-bedrock = "1"
aws-sdk-omics = "1"
aws-sdk-bcm = "1"
aws-sdk-mediapackage = "1"
aws-sdk-sagemaker = "1"
aws-sdk-config = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-medialive = "1"
aws-sdk-backup = "1"
aws-sdk-connect = "1"
aws-sdk-mediaconvert = "1"
aws-sdk-sns = "1"
aws-sdk-evs = "1"
aws-sdk-datasync = "1"
aws-sdk-greengrassv2 = "1"
aws-sdk-cleanroomsml = "1"
aws-sdk-neptunedata = "1"
aws-sdk-acm = "1"
aws-sdk-service = "1"
aws-sdk-b2bi = "1"
aws-sdk-iotanalytics = "1"
aws-sdk-lex = "1"
aws-sdk-inspector2 = "1"
aws-sdk-groundstation = "1"
aws-sdk-ecr = "1"
aws-sdk-fis = "1"
aws-sdk-proton = "1"
aws-sdk-api = "1"
aws-sdk-cloudhsm = "1"
aws-sdk-mpa = "1"
aws-sdk-osis = "1"
aws-sdk-memorydb = "1"
aws-sdk-inspector = "1"
aws-sdk-translate = "1"
aws-sdk-mailmanager = "1"
aws-sdk-neptune = "1"
aws-sdk-chatbot = "1"
aws-sdk-fms = "1"
aws-sdk-qapps = "1"
aws-sdk-customer = "1"
aws-sdk-geo = "1"
aws-sdk-route = "1"
aws-sdk-service = "1"
aws-sdk-qbusiness = "1"
aws-sdk-synthetics = "1"
aws-sdk-codecatalyst = "1"
aws-sdk-keyspacesstreams = "1"
aws-sdk-storage = "1"
aws-sdk-elastic = "1"
aws-sdk-bcm = "1"
aws-sdk-iotsecuretunneling = "1"
aws-sdk-cloudfront = "1"
aws-sdk-bedrock = "1"
aws-sdk-location = "1"
aws-sdk-wafv2 = "1"
aws-sdk-opensearch = "1"
aws-sdk-iotthingsgraph = "1"
aws-sdk-security = "1"
aws-sdk-repostspace = "1"
aws-sdk-health = "1"
aws-sdk-workmailmessageflow = "1"
aws-sdk-mediastore = "1"
aws-sdk-ec2 = "1"
aws-sdk-comprehendmedical = "1"
aws-sdk-iotfleetwise = "1"
aws-sdk-route53profiles = "1"
aws-sdk-application = "1"
aws-sdk-resource = "1"
aws-sdk-accessanalyzer = "1"
aws-sdk-glacier = "1"
aws-sdk-lightsail = "1"
aws-sdk-rum = "1"
aws-sdk-direct = "1"
aws-sdk-elastic = "1"
aws-sdk-imagebuilder = "1"
aws-sdk-simspaceweaver = "1"
aws-sdk-iot = "1"
aws-sdk-freetier = "1"
aws-sdk-bedrock = "1"
aws-sdk-neptune = "1"
aws-sdk-transfer = "1"
aws-sdk-deadline = "1"
aws-sdk-braket = "1"
aws-sdk-verifiedpermissions = "1"
aws-sdk-scheduler = "1"
aws-sdk-waf = "1"
aws-sdk-marketplace = "1"
aws-sdk-ecr = "1"
aws-sdk-cost = "1"
aws-sdk-kinesis = "1"
aws-sdk-dynamodb = "1"
aws-sdk-resiliencehub = "1"
aws-sdk-macie2 = "1"
aws-sdk-entityresolution = "1"
aws-sdk-s3outposts = "1"
aws-sdk-grafana = "1"
aws-sdk-kinesis = "1"
aws-sdk-eks = "1"
aws-sdk-rbin = "1"
aws-sdk-service = "1"
aws-sdk-ecs = "1"
aws-sdk-marketplace = "1"
aws-sdk-timestream = "1"
aws-sdk-qconnect = "1"
aws-sdk-cloudsearch = "1"
aws-sdk-bcm = "1"
aws-sdk-appfabric = "1"
aws-sdk-route53resolver = "1"
aws-sdk-marketplace = "1"
aws-sdk-workspaces = "1"
aws-sdk-gameliftstreams = "1"
aws-sdk-taxsettings = "1"
aws-sdk-pinpoint = "1"
aws-sdk-fsx = "1"
aws-sdk-codepipeline = "1"
aws-sdk-schemas = "1"
aws-sdk-emr = "1"
aws-sdk-sqs = "1"
aws-sdk-license = "1"
aws-sdk-route53 = "1"
aws-sdk-migrationhuborchestrator = "1"
aws-sdk-iot = "1"
aws-sdk-sso = "1"
aws-sdk-codestar = "1"
aws-sdk-ebs = "1"
aws-sdk-aiops = "1"
aws-sdk-amplify = "1"
aws-sdk-cloudcontrol = "1"
aws-sdk-wellarchitected = "1"
aws-sdk-route = "1"
aws-sdk-ssm = "1"
aws-sdk-bedrock = "1"
aws-sdk-ivs = "1"
aws-sdk-migrationhub = "1"
aws-sdk-redshift = "1"
aws-sdk-inspector = "1"
aws-sdk-connectcases = "1"
aws-sdk-kinesis = "1"
aws-sdk-pca = "1"
aws-sdk-appflow = "1"
aws-sdk-gamelift = "1"
aws-sdk-cloudtrail = "1"
aws-sdk-resource = "1"
aws-sdk-supplychain = "1"
aws-sdk-timestream = "1"
aws-sdk-pipes = "1"
aws-sdk-evidently = "1"
aws-sdk-codeguru = "1"
aws-sdk-cost = "1"
aws-sdk-amplifyuibuilder = "1"
aws-sdk-route53 = "1"
aws-sdk-vpc = "1"
aws-sdk-managedblockchain = "1"
aws-sdk-redshift = "1"
aws-sdk-mediatailor = "1"
aws-sdk-mediapackagev2 = "1"
aws-sdk-pi = "1"
aws-sdk-appconfig = "1"
aws-sdk-networkmonitor = "1"
aws-sdk-network = "1"
aws-sdk-connectparticipant = "1"
aws-sdk-mgn = "1"
aws-sdk-sagemaker = "1"
aws-sdk-applicationcostprofiler = "1"
aws-sdk-keyspaces = "1"
aws-sdk-iam = "1"
aws-sdk-data = "1"
aws-sdk-odb = "1"
aws-sdk-chime = "1"
aws-sdk-mediastore = "1"
aws-sdk-iot = "1"
aws-sdk-cloud9 = "1"
aws-sdk-wisdom = "1"
aws-sdk-sagemaker = "1"
aws-sdk-sso = "1"
aws-sdk-auditmanager = "1"
aws-sdk-snowball = "1"
aws-sdk-migration = "1"
aws-sdk-identitystore = "1"
aws-sdk-elastic = "1"
aws-sdk-connectcampaigns = "1"
aws-sdk-textract = "1"
aws-sdk-compute = "1"
aws-sdk-s3tables = "1"
aws-sdk-eks = "1"
aws-sdk-support = "1"
aws-sdk-mturk = "1"
aws-sdk-apigatewayv2 = "1"
aws-sdk-cognito = "1"
aws-sdk-bedrock = "1"
aws-sdk-pinpoint = "1"
aws-sdk-amp = "1"
aws-sdk-drs = "1"
aws-sdk-payment = "1"
aws-sdk-kafkaconnect = "1"
aws-sdk-kafka = "1"
aws-sdk-databrew = "1"
aws-sdk-support = "1"
aws-sdk-codedeploy = "1"
aws-sdk-batch = "1"
aws-sdk-savingsplans = "1"
aws-sdk-bedrock = "1"
aws-sdk-directory = "1"
aws-sdk-workspaces = "1"
aws-sdk-chime = "1"
aws-sdk-migrationhubstrategy = "1"
aws-sdk-timestream = "1"
aws-sdk-codeguru = "1"
aws-sdk-appsync = "1"
aws-sdk-dlm = "1"
aws-sdk-iot = "1"
aws-sdk-global = "1"
aws-sdk-amplifybackend = "1"
aws-sdk-datazone = "1"
aws-sdk-connectcampaignsv2 = "1"
aws-sdk-billingconductor = "1"
aws-sdk-budgets = "1"
aws-sdk-cloudtrail = "1"
aws-sdk-geo = "1"
aws-sdk-m2 = "1"
aws-sdk-pinpoint = "1"
aws-sdk-lex = "1"
aws-sdk-finspace = "1"
aws-sdk-detective = "1"
aws-sdk-lambda = "1"
aws-sdk-kinesis = "1"
aws-sdk-panorama = "1"
aws-sdk-iot = "1"
aws-sdk-app = "1"
aws-sdk-managedblockchain = "1"
aws-sdk-waf = "1"
aws-sdk-ivs = "1"
aws-sdk-devops = "1"
aws-sdk-cost = "1"
aws-sdk-mq = "1"
aws-sdk-route53 = "1"
aws-sdk-internetmonitor = "1"
aws-sdk-license = "1"
aws-sdk-codestar = "1"
aws-sdk-artifact = "1"
aws-sdk-ssm = "1"
aws-sdk-iotsitewise = "1"
aws-sdk-serverlessapplicationrepository = "1"
aws-sdk-ssm = "1"
aws-sdk-docdb = "1"
aws-sdk-sagemaker = "1"
aws-sdk-license = "1"
aws-sdk-sagemaker = "1"
aws-sdk-personalize = "1"
aws-sdk-clouddirectory = "1"
aws-sdk-chime = "1"
aws-sdk-notificationscontacts = "1"
aws-sdk-backupsearch = "1"
aws-sdk-dynamodb = "1"
aws-sdk-iot = "1"
aws-sdk-cognito = "1"
aws-sdk-codeartifact = "1"
aws-sdk-arc = "1"
aws-sdk-elastic = "1"
aws-sdk-guardduty = "1"
aws-sdk-cleanrooms = "1"
aws-sdk-trustedadvisor = "1"
aws-sdk-sagemaker = "1"
aws-sdk-dax = "1"
aws-sdk-docdb = "1"
aws-sdk-firehose = "1"
aws-sdk-ivschat = "1"
aws-sdk-ses = "1"
aws-sdk-bcm = "1"
aws-sdk-application = "1"
aws-sdk-device = "1"
aws-sdk-account = "1"
aws-sdk-launch = "1"
aws-sdk-finspace = "1"
aws-sdk-appconfigdata = "1"
aws-sdk-controlcatalog = "1"
aws-sdk-greengrass = "1"
aws-sdk-kendra = "1"
aws-sdk-snow = "1"
aws-sdk-securityhub = "1"
aws-sdk-s3vectors = "1"
aws-sdk-workspaces = "1"
aws-sdk-backup = "1"
aws-sdk-opensearchserverless = "1"
aws-sdk-cloudformation = "1"
aws-sdk-kendra = "1"
aws-sdk-connect = "1"
aws-sdk-machine = "1"
aws-sdk-elasticache = "1"
aws-sdk-sfn = "1"
aws-sdk-sso = "1"
aws-sdk-auto = "1"
aws-sdk-comprehend = "1"
aws-sdk-rds = "1"
aws-sdk-chime = "1"
aws-sdk-rekognition = "1"
aws-sdk-appstream = "1"
aws-sdk-polly = "1"
aws-sdk-invoicing = "1"
aws-sdk-rds = "1"
aws-sdk-pricing = "1"
aws-sdk-swf = "1"
aws-sdk-cloudfront = "1"
aws-sdk-marketplace = "1"
aws-sdk-medical = "1"
aws-sdk-transcribe = "1"
aws-sdk-observabilityadmin = "1"
aws-sdk-notifications = "1"
aws-sdk-codecommit = "1"
aws-sdk-lex = "1"
aws-sdk-pca = "1"
aws-sdk-forecastquery = "1"
aws-sdk-healthlake = "1"
aws-sdk-rolesanywhere = "1"
aws-sdk-marketplace = "1"
aws-sdk-billing = "1"
aws-sdk-emr = "1"
aws-sdk-apigatewaymanagementapi = "1"
aws-sdk-xray = "1"
aws-sdk-transcribe = "1"
aws-sdk-ram = "1"
aws-sdk-codeconnections = "1"
aws-sdk-efs = "1"
aws-sdk-migration = "1"
aws-sdk-elasticsearch = "1"
aws-sdk-cognito = "1"
aws-sdk-payment = "1"
aws-sdk-dataexchange = "1"
aws-sdk-sts = "1"
aws-sdk-sagemaker = "1"
aws-sdk-kinesis = "1"
aws-sdk-acm = "1"
aws-sdk-athena = "1"
aws-sdk-dsql = "1"
aws-sdk-mediapackage = "1"
aws-sdk-tnb = "1"
aws-sdk-ec2 = "1"
aws-sdk-apprunner = "1"
aws-sdk-redshift = "1"
aws-config = "1"


# Standard dependencies
anyhow = "1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
