[package]
name = "hemmer-aws-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
# Hemmer provider runtime (placeholder)
# hemmer-runtime = "0.1"

# SDK dependencies for all services
aws-sdk-oam_2022_06_10 = "1"
aws-sdk-forecast_2018_06_26 = "1"
aws-sdk-bedrock_runtime_2023_09_30 = "1"
aws-sdk-codebuild_2016_10_06 = "1"
aws-sdk-iotdeviceadvisor_2020_09_18 = "1"
aws-sdk-auto_scaling_2011_01_01 = "1"
aws-sdk-database_migration_service_2016_01_01 = "1"
aws-sdk-codeguruprofiler_2019_07_18 = "1"
aws-sdk-kinesis_2013_12_02 = "1"
aws-sdk-pinpoint_2016_12_01 = "1"
aws-sdk-chime_2018_05_01 = "1"
aws-sdk-iottwinmaker_2021_11_29 = "1"
aws-sdk-organizations_2016_11_28 = "1"
aws-sdk-networkflowmonitor_2023_04_19 = "1"
aws-sdk-shield_2016_06_02 = "1"
aws-sdk-ssm_2014_11_06 = "1"
aws-sdk-arc_zonal_shift_2022_10_30 = "1"
aws-sdk-workspaces_thin_client_2023_08_22 = "1"
aws-sdk-partnercentral_selling_2022_07_26 = "1"
aws-sdk-geo_places_2020_11_19 = "1"
aws-sdk-signer_2017_08_25 = "1"
aws-sdk-marketplace_reporting_2018_05_10 = "1"
aws-sdk-lakeformation_2017_03_31 = "1"
aws-sdk-pcs_2023_02_10 = "1"
aws-sdk-kinesis = "1"
aws-sdk-mediaconnect_2018_11_14 = "1"
aws-sdk-secrets_manager_2017_10_17 = "1"
aws-sdk-mwaa_2020_07_01 = "1"
aws-sdk-kms_2014_11_01 = "1"
aws-sdk-quicksight_2018_04_01 = "1"
aws-sdk-workmail_2017_10_01 = "1"
aws-sdk-eventbridge_2015_10_07 = "1"
aws-sdk-frauddetector_2019_11_15 = "1"
aws-sdk-cloudwatch_events_2015_10_07 = "1"
aws-sdk-cloudhsm = "1"
aws-sdk-cloudsearch_domain_2013_01_01 = "1"
aws-sdk-lookoutequipment_2020_12_15 = "1"
aws-sdk-iot_events_data_2018_10_23 = "1"
aws-sdk-securitylake_2018_05_10 = "1"
aws-sdk-cloudwatch_2010_08_01 = "1"
aws-sdk-glue_2017_03_31 = "1"
aws-sdk-application_auto_scaling_2016_02_06 = "1"
aws-sdk-personalize_events_2018_03_22 = "1"
aws-sdk-voice_id_2021_09_27 = "1"
aws-sdk-s3_2006_03_01 = "1"
aws-sdk-appintegrations_2020_07_29 = "1"
aws-sdk-lex_runtime_service_2016_11_28 = "1"
aws-sdk-ssm_contacts_2021_05_03 = "1"
aws-sdk-chime_sdk_meetings_2021_07_15 = "1"
aws-sdk-sesv2_2019_09_27 = "1"
aws-sdk-bedrock_agentcore_control_2023_06_05 = "1"
aws-sdk-emr_2009_03_31 = "1"
aws-sdk-controltower_2018_05_10 = "1"
aws-sdk-resource_explorer_2_2022_07_28 = "1"
aws-sdk-s3_control_2018_08_20 = "1"
aws-sdk-rtbfabric_2023_05_15 = "1"
aws-sdk-personalize_2018_05_22 = "1"
aws-sdk-marketplace_entitlement_service_2017_01_11 = "1"
aws-sdk-directory_service_data_2023_05_31 = "1"
aws-sdk-ssm_sap_2018_05_10 = "1"
aws-sdk-outposts_2019_12_03 = "1"
aws-sdk-workdocs_2016_05_01 = "1"
aws-sdk-networkmanager_2019_07_05 = "1"
aws-sdk-kinesis = "1"
aws-sdk-socialmessaging_2024_01_01 = "1"
aws-sdk-bedrock_agentcore_2024_02_28 = "1"
aws-sdk-omics_2022_11_28 = "1"
aws-sdk-bcm_recommended_actions_2024_11_14 = "1"
aws-sdk-mediapackage_2017_10_12 = "1"
aws-sdk-sagemaker_featurestore_runtime_2020_07_01 = "1"
aws-sdk-config_service_2014_11_12 = "1"
aws-sdk-cloudwatch_logs_2014_03_28 = "1"
aws-sdk-medialive_2017_10_14 = "1"
aws-sdk-backup_gateway_2021_01_01 = "1"
aws-sdk-connect_contact_lens_2020_08_21 = "1"
aws-sdk-mediaconvert_2017_08_29 = "1"
aws-sdk-sns_2010_03_31 = "1"
aws-sdk-evs_2023_07_27 = "1"
aws-sdk-datasync_2018_11_09 = "1"
aws-sdk-greengrassv2_2020_11_30 = "1"
aws-sdk-cleanroomsml_2023_09_06 = "1"
aws-sdk-neptunedata_2023_08_01 = "1"
aws-sdk-acm_pca_2017_08_22 = "1"
aws-sdk-service_catalog_2015_12_10 = "1"
aws-sdk-b2bi_2022_06_23 = "1"
aws-sdk-iotanalytics_2017_11_27 = "1"
aws-sdk-lex_model_building_service_2017_04_19 = "1"
aws-sdk-inspector2_2020_06_08 = "1"
aws-sdk-groundstation_2019_05_23 = "1"
aws-sdk-ecr_public_2020_10_30 = "1"
aws-sdk-fis_2020_12_01 = "1"
aws-sdk-proton_2020_07_20 = "1"
aws-sdk-api_gateway_2015_07_09 = "1"
aws-sdk-cloudhsm_2014_05_30 = "1"
aws-sdk-mpa_2022_07_26 = "1"
aws-sdk-osis_2022_01_01 = "1"
aws-sdk-memorydb_2021_01_01 = "1"
aws-sdk-inspector_2016_02_16 = "1"
aws-sdk-translate_2017_07_01 = "1"
aws-sdk-mailmanager_2023_10_17 = "1"
aws-sdk-neptune_graph_2023_11_29 = "1"
aws-sdk-chatbot_2017_10_11 = "1"
aws-sdk-fms_2018_01_01 = "1"
aws-sdk-qapps_2023_11_27 = "1"
aws-sdk-customer_profiles_2020_08_15 = "1"
aws-sdk-geo_maps_2020_11_19 = "1"
aws-sdk-route_53_domains_2014_05_15 = "1"
aws-sdk-service_catalog_appregistry_2020_06_24 = "1"
aws-sdk-qbusiness_2023_11_27 = "1"
aws-sdk-synthetics_2017_10_11 = "1"
aws-sdk-codecatalyst_2022_09_28 = "1"
aws-sdk-keyspacesstreams_2024_09_09 = "1"
aws-sdk-storage_gateway_2013_06_30 = "1"
aws-sdk-elastic_transcoder_2012_09_25 = "1"
aws-sdk-bcm_data_exports_2023_11_26 = "1"
aws-sdk-iotsecuretunneling_2018_10_05 = "1"
aws-sdk-cloudfront_2020_05_31 = "1"
aws-sdk-bedrock_data_automation_2023_07_26 = "1"
aws-sdk-location_2020_11_19 = "1"
aws-sdk-wafv2_2019_07_29 = "1"
aws-sdk-opensearch_2021_01_01 = "1"
aws-sdk-iotthingsgraph_2018_09_06 = "1"
aws-sdk-security_ir_2018_05_10 = "1"
aws-sdk-repostspace_2022_05_13 = "1"
aws-sdk-health_2016_08_04 = "1"
aws-sdk-workmailmessageflow_2019_05_01 = "1"
aws-sdk-mediastore_data_2017_09_01 = "1"
aws-sdk-ec2_instance_connect_2018_04_02 = "1"
aws-sdk-comprehendmedical_2018_10_30 = "1"
aws-sdk-iotfleetwise_2021_06_17 = "1"
aws-sdk-route53profiles_2018_05_10 = "1"
aws-sdk-application_signals_2024_04_15 = "1"
aws-sdk-resource_groups_tagging_api_2017_01_26 = "1"
aws-sdk-accessanalyzer_2019_11_01 = "1"
aws-sdk-glacier_2012_06_01 = "1"
aws-sdk-lightsail_2016_11_28 = "1"
aws-sdk-rum_2018_05_10 = "1"
aws-sdk-direct_connect_2012_10_25 = "1"
aws-sdk-elastic_beanstalk_2010_12_01 = "1"
aws-sdk-imagebuilder_2019_12_02 = "1"
aws-sdk-simspaceweaver_2022_10_28 = "1"
aws-sdk-iot_jobs_data_plane_2017_09_29 = "1"
aws-sdk-freetier_2023_09_07 = "1"
aws-sdk-bedrock_agent_runtime_2023_07_26 = "1"
aws-sdk-neptune_2014_10_31 = "1"
aws-sdk-transfer_2018_11_05 = "1"
aws-sdk-deadline_2023_10_12 = "1"
aws-sdk-braket_2019_09_01 = "1"
aws-sdk-verifiedpermissions_2021_12_01 = "1"
aws-sdk-scheduler_2021_06_30 = "1"
aws-sdk-waf_regional_2016_11_28 = "1"
aws-sdk-marketplace_commerce_analytics_2015_07_01 = "1"
aws-sdk-ecr_2015_09_21 = "1"
aws-sdk-cost_and_usage_report_service_2017_01_06 = "1"
aws-sdk-kinesis = "1"
aws-sdk-dynamodb_2012_08_10 = "1"
aws-sdk-resiliencehub_2020_04_30 = "1"
aws-sdk-macie2_2020_01_01 = "1"
aws-sdk-entityresolution_2018_05_10 = "1"
aws-sdk-s3outposts_2017_07_25 = "1"
aws-sdk-grafana_2020_08_18 = "1"
aws-sdk-kinesis_analytics_2015_08_14 = "1"
aws-sdk-eks_auth_2023_11_26 = "1"
aws-sdk-rbin_2021_06_15 = "1"
aws-sdk-service_quotas_2019_06_24 = "1"
aws-sdk-ecs_2014_11_13 = "1"
aws-sdk-marketplace_metering_2016_01_14 = "1"
aws-sdk-timestream_write_2018_11_01 = "1"
aws-sdk-qconnect_2020_10_19 = "1"
aws-sdk-cloudsearch_2013_01_01 = "1"
aws-sdk-bcm_pricing_calculator_2024_06_19 = "1"
aws-sdk-appfabric_2023_05_19 = "1"
aws-sdk-route53resolver_2018_04_01 = "1"
aws-sdk-marketplace_agreement_2020_03_01 = "1"
aws-sdk-workspaces_2015_04_08 = "1"
aws-sdk-gameliftstreams_2018_05_10 = "1"
aws-sdk-taxsettings_2018_05_10 = "1"
aws-sdk-pinpoint_sms = "1"
aws-sdk-fsx_2018_03_01 = "1"
aws-sdk-codepipeline_2015_07_09 = "1"
aws-sdk-schemas_2019_12_02 = "1"
aws-sdk-emr_serverless_2021_07_13 = "1"
aws-sdk-sqs_2012_11_05 = "1"
aws-sdk-license_manager_user_subscriptions_2018_05_10 = "1"
aws-sdk-route53_recovery_cluster_2019_12_02 = "1"
aws-sdk-migrationhuborchestrator_2021_08_28 = "1"
aws-sdk-iot_2015_05_28 = "1"
aws-sdk-sso_oidc_2019_06_10 = "1"
aws-sdk-codestar_notifications_2019_10_15 = "1"
aws-sdk-ebs_2019_11_02 = "1"
aws-sdk-aiops_2018_05_10 = "1"
aws-sdk-amplify_2017_07_25 = "1"
aws-sdk-cloudcontrol_2021_09_30 = "1"
aws-sdk-wellarchitected_2020_03_31 = "1"
aws-sdk-route_53_2013_04_01 = "1"
aws-sdk-ssm_incidents_2018_05_10 = "1"
aws-sdk-bedrock_2023_04_20 = "1"
aws-sdk-ivs_realtime_2020_07_14 = "1"
aws-sdk-migrationhub_config_2019_06_30 = "1"
aws-sdk-redshift_2012_12_01 = "1"
aws-sdk-inspector_scan_2023_08_08 = "1"
aws-sdk-connectcases_2022_10_03 = "1"
aws-sdk-kinesis = "1"
aws-sdk-pca_connector_scep_2018_05_10 = "1"
aws-sdk-appflow_2020_08_23 = "1"
aws-sdk-gamelift_2015_10_01 = "1"
aws-sdk-cloudtrail_2013_11_01 = "1"
aws-sdk-resource_groups_2017_11_27 = "1"
aws-sdk-supplychain_2024_01_01 = "1"
aws-sdk-timestream_influxdb_2023_01_27 = "1"
aws-sdk-pipes_2015_10_07 = "1"
aws-sdk-evidently_2021_02_01 = "1"
aws-sdk-codeguru_security_2018_05_10 = "1"
aws-sdk-cost_optimization_hub_2022_07_26 = "1"
aws-sdk-amplifyuibuilder_2021_08_11 = "1"
aws-sdk-route53_recovery_control_config_2020_11_02 = "1"
aws-sdk-vpc_lattice_2022_11_30 = "1"
aws-sdk-managedblockchain_query_2023_05_04 = "1"
aws-sdk-redshift_data_2019_12_20 = "1"
aws-sdk-mediatailor_2018_04_23 = "1"
aws-sdk-mediapackagev2_2022_12_25 = "1"
aws-sdk-pi_2018_02_27 = "1"
aws-sdk-appconfig_2019_10_09 = "1"
aws-sdk-networkmonitor_2023_08_01 = "1"
aws-sdk-network_firewall_2020_11_12 = "1"
aws-sdk-connectparticipant_2018_09_07 = "1"
aws-sdk-mgn_2020_02_26 = "1"
aws-sdk-sagemaker_edge_2020_09_23 = "1"
aws-sdk-applicationcostprofiler_2020_09_10 = "1"
aws-sdk-keyspaces_2022_02_10 = "1"
aws-sdk-iam_2010_05_08 = "1"
aws-sdk-data_pipeline_2012_10_29 = "1"
aws-sdk-odb_2024_08_20 = "1"
aws-sdk-chime_sdk_messaging_2021_05_15 = "1"
aws-sdk-mediastore_2017_09_01 = "1"
aws-sdk-iot_wireless_2020_11_22 = "1"
aws-sdk-cloud9_2017_09_23 = "1"
aws-sdk-wisdom_2020_10_19 = "1"
aws-sdk-sagemaker_runtime_2017_05_13 = "1"
aws-sdk-sso_2019_06_10 = "1"
aws-sdk-auditmanager_2017_07_25 = "1"
aws-sdk-snowball_2016_06_30 = "1"
aws-sdk-migration_hub_2017_05_31 = "1"
aws-sdk-identitystore_2020_06_15 = "1"
aws-sdk-elastic_load_balancing = "1"
aws-sdk-connectcampaigns_2021_01_30 = "1"
aws-sdk-textract_2018_06_27 = "1"
aws-sdk-compute_optimizer_2019_11_01 = "1"
aws-sdk-s3tables_2018_05_10 = "1"
aws-sdk-eks_2017_11_01 = "1"
aws-sdk-support_2013_04_15 = "1"
aws-sdk-mturk_2017_01_17 = "1"
aws-sdk-apigatewayv2_2018_11_29 = "1"
aws-sdk-cognito_identity_provider_2016_04_18 = "1"
aws-sdk-bedrock_data_automation_runtime_2024_06_13 = "1"
aws-sdk-pinpoint_sms = "1"
aws-sdk-amp_2020_08_01 = "1"
aws-sdk-drs_2020_02_26 = "1"
aws-sdk-payment_cryptography_2021_09_14 = "1"
aws-sdk-kafkaconnect_2021_09_14 = "1"
aws-sdk-kafka_2018_11_14 = "1"
aws-sdk-databrew_2017_07_25 = "1"
aws-sdk-support_app_2021_08_20 = "1"
aws-sdk-codedeploy_2014_10_06 = "1"
aws-sdk-batch_2016_08_10 = "1"
aws-sdk-savingsplans_2019_06_28 = "1"
aws-sdk-bedrock_agent_2023_06_05 = "1"
aws-sdk-directory_service_2015_04_16 = "1"
aws-sdk-workspaces_instances_2022_07_26 = "1"
aws-sdk-chime_sdk_media_pipelines_2021_07_15 = "1"
aws-sdk-migrationhubstrategy_2020_02_19 = "1"
aws-sdk-timestream_query_2018_11_01 = "1"
aws-sdk-codeguru_reviewer_2019_09_19 = "1"
aws-sdk-appsync_2017_07_25 = "1"
aws-sdk-dlm_2018_01_12 = "1"
aws-sdk-iot_data_plane_2015_05_28 = "1"
aws-sdk-global_accelerator_2018_08_08 = "1"
aws-sdk-amplifybackend_2020_08_11 = "1"
aws-sdk-datazone_2018_05_10 = "1"
aws-sdk-connectcampaignsv2_2024_04_23 = "1"
aws-sdk-billingconductor_2021_07_30 = "1"
aws-sdk-budgets_2016_10_20 = "1"
aws-sdk-cloudtrail_data_2021_08_11 = "1"
aws-sdk-geo_routes_2020_11_19 = "1"
aws-sdk-m2_2021_04_28 = "1"
aws-sdk-pinpoint_email_2018_07_26 = "1"
aws-sdk-lex_models = "1"
aws-sdk-finspace_2021_03_12 = "1"
aws-sdk-detective_2018_10_26 = "1"
aws-sdk-lambda_2015_03_31 = "1"
aws-sdk-kinesis_analytics = "1"
aws-sdk-panorama_2019_07_24 = "1"
aws-sdk-iot_events_2018_07_27 = "1"
aws-sdk-app_mesh_2019_01_25 = "1"
aws-sdk-managedblockchain_2018_09_24 = "1"
aws-sdk-waf_2015_08_24 = "1"
aws-sdk-ivs_2020_07_14 = "1"
aws-sdk-devops_guru_2020_12_01 = "1"
aws-sdk-cost_explorer_2017_10_25 = "1"
aws-sdk-mq_2017_11_27 = "1"
aws-sdk-route53_recovery_readiness_2019_12_02 = "1"
aws-sdk-internetmonitor_2021_06_03 = "1"
aws-sdk-license_manager_2018_08_01 = "1"
aws-sdk-codestar_connections_2019_12_01 = "1"
aws-sdk-artifact_2018_05_10 = "1"
aws-sdk-ssm_guiconnect_2021_05_01 = "1"
aws-sdk-iotsitewise_2019_12_02 = "1"
aws-sdk-serverlessapplicationrepository_2017_09_08 = "1"
aws-sdk-ssm_quicksetup_2018_05_10 = "1"
aws-sdk-docdb_elastic_2022_11_28 = "1"
aws-sdk-sagemaker_metrics_2022_09_30 = "1"
aws-sdk-license_manager_linux_subscriptions_2018_05_10 = "1"
aws-sdk-sagemaker_geospatial_2020_05_27 = "1"
aws-sdk-personalize_runtime_2018_05_22 = "1"
aws-sdk-clouddirectory_2017_01_11 = "1"
aws-sdk-chime_sdk = "1"
aws-sdk-notificationscontacts_2018_05_10 = "1"
aws-sdk-backupsearch_2018_05_10 = "1"
aws-sdk-dynamodb_streams_2012_08_10 = "1"
aws-sdk-iot_managed_integrations_2025_03_03 = "1"
aws-sdk-cognito_sync_2014_06_30 = "1"
aws-sdk-codeartifact_2018_09_22 = "1"
aws-sdk-arc_region_switch_2022_07_26 = "1"
aws-sdk-elastic_load_balancing_2012_06_01 = "1"
aws-sdk-guardduty_2017_11_28 = "1"
aws-sdk-cleanrooms_2022_02_17 = "1"
aws-sdk-trustedadvisor_2022_09_15 = "1"
aws-sdk-sagemaker_a2i_runtime_2019_11_07 = "1"
aws-sdk-dax_2017_04_19 = "1"
aws-sdk-docdb_2014_10_31 = "1"
aws-sdk-firehose_2015_08_04 = "1"
aws-sdk-ivschat_2020_07_14 = "1"
aws-sdk-ses_2010_12_01 = "1"
aws-sdk-bcm_dashboards_2025_08_18 = "1"
aws-sdk-application_insights_2018_11_25 = "1"
aws-sdk-device_farm_2015_06_23 = "1"
aws-sdk-account_2021_02_01 = "1"
aws-sdk-launch_wizard_2018_05_10 = "1"
aws-sdk-finspace_data_2020_07_13 = "1"
aws-sdk-appconfigdata_2021_11_11 = "1"
aws-sdk-controlcatalog_2018_05_10 = "1"
aws-sdk-greengrass_2017_06_07 = "1"
aws-sdk-kendra_ranking_2022_10_19 = "1"
aws-sdk-snow_device_management_2021_08_04 = "1"
aws-sdk-securityhub_2018_10_26 = "1"
aws-sdk-s3vectors_2025_07_15 = "1"
aws-sdk-workspaces_web_2020_07_08 = "1"
aws-sdk-backup_2018_11_15 = "1"
aws-sdk-opensearchserverless_2021_11_01 = "1"
aws-sdk-cloudformation_2010_05_15 = "1"
aws-sdk-kendra_2019_02_03 = "1"
aws-sdk-connect_2017_08_08 = "1"
aws-sdk-machine_learning_2014_12_12 = "1"
aws-sdk-elasticache_2015_02_02 = "1"
aws-sdk-sfn_2016_11_23 = "1"
aws-sdk-sso_admin_2020_07_20 = "1"
aws-sdk-auto_scaling_plans_2018_01_06 = "1"
aws-sdk-comprehend_2017_11_27 = "1"
aws-sdk-rds_data_2018_08_01 = "1"
aws-sdk-chime_sdk_identity_2021_04_20 = "1"
aws-sdk-rekognition_2016_06_27 = "1"
aws-sdk-appstream_2016_12_01 = "1"
aws-sdk-polly_2016_06_10 = "1"
aws-sdk-invoicing_2024_12_01 = "1"
aws-sdk-rds_2014_10_31 = "1"
aws-sdk-pricing_2017_10_15 = "1"
aws-sdk-swf_2012_01_25 = "1"
aws-sdk-cloudfront_keyvaluestore_2022_07_26 = "1"
aws-sdk-marketplace_deployment_2023_01_25 = "1"
aws-sdk-medical_imaging_2023_07_19 = "1"
aws-sdk-transcribe_2017_10_26 = "1"
aws-sdk-observabilityadmin_2018_05_10 = "1"
aws-sdk-notifications_2018_05_10 = "1"
aws-sdk-codecommit_2015_04_13 = "1"
aws-sdk-lex_runtime = "1"
aws-sdk-pca_connector_ad_2018_05_10 = "1"
aws-sdk-forecastquery_2018_06_26 = "1"
aws-sdk-healthlake_2017_07_01 = "1"
aws-sdk-rolesanywhere_2018_05_10 = "1"
aws-sdk-marketplace_catalog_2018_09_17 = "1"
aws-sdk-billing_2023_09_07 = "1"
aws-sdk-emr_containers_2020_10_01 = "1"
aws-sdk-apigatewaymanagementapi_2018_11_29 = "1"
aws-sdk-xray_2016_04_12 = "1"
aws-sdk-transcribe_streaming_2017_10_26 = "1"
aws-sdk-ram_2018_01_04 = "1"
aws-sdk-codeconnections_2023_12_01 = "1"
aws-sdk-efs_2015_02_01 = "1"
aws-sdk-migration_hub_refactor_spaces_2021_10_26 = "1"
aws-sdk-elasticsearch_service_2015_01_01 = "1"
aws-sdk-cognito_identity_2014_06_30 = "1"
aws-sdk-payment_cryptography_data_2022_02_03 = "1"
aws-sdk-dataexchange_2017_07_25 = "1"
aws-sdk-sts_2011_06_15 = "1"
aws-sdk-sagemaker_2017_07_24 = "1"
aws-sdk-kinesis = "1"
aws-sdk-acm_2015_12_08 = "1"
aws-sdk-athena_2017_05_18 = "1"
aws-sdk-dsql_2018_05_10 = "1"
aws-sdk-mediapackage = "1"
aws-sdk-tnb_2008_10_21 = "1"
aws-sdk-ec2_2016_11_15 = "1"
aws-sdk-apprunner_2020_05_15 = "1"
aws-sdk-redshift_serverless_2021_04_21 = "1"
aws-config = "1"


# Standard dependencies
anyhow = "1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
