[package]
name = "hemmer-aws-provider"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Hemmer provider runtime
hemmer-provider = { path = "../hemmer/crates/hemmer-provider" }
hemmer-core = { path = "../hemmer/crates/hemmer-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
aws-config = "1"
aws-types = "1"

# Core AWS SDK dependencies for minimal provider
aws-sdk-s3 = "1"
aws-sdk-ec2 = "1"
